[package]
name = "slack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "*", features = ["json", "charset"] }
tokio = { version = "0.2", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
